# internet-identity

./: Dockerfile  canister_ids.json  dfx.json  internet_identity.wasm  package-lock.json  package.json  webpack.config.js
.github/actions/setup-dfx/: action.yml
.github/workflows/: canister-tests.yml
demos/using-dev-build/: canister_ids.json
demos/using-dev-build/webapp/: index.html
docker-test-env/: README.md  docker-compose.yml
docker-test-env/reverse_proxy/: Dockerfile  nginx.conf
scripts/: build  build_log_canister  docker-build  start-selenium-env
src/archive/: Cargo.toml  archive.did
src/archive/src/: main.rs
src/canister_tests/src/: archive_tests.rs  framework.rs  lib.rs  log_api.rs  log_tests.rs
src/frontend/: test-setup.ts
src/frontend/src/: index.ts
src/frontend/src/flows/authenticate/: index.ts  validateDerivationOrigin.ts
src/frontend/src/test-e2e/: selenium.test.ts  util.ts
src/frontend/src/utils/: featureDetection.ts  migrating.ts
src/internet_identity_interface/src/: lib.rs
src/internet_identity_log/: Cargo.toml  internet_identity_log.did
src/internet_identity_log/src/: lib.rs  main.rs
