[package]
name = "archive"
description = "Internet Identity Log Canister"
version = "0.1.0"
edition = "2021"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
serde = "1"
serde_bytes = "0.11"
serde_cbor = "0.11"
serde_with = "2"
internet_identity_interface = { path = "../internet_identity_interface" }
candid = "0.7"
ic-cdk = "0.5"
ic-cdk-macros = "0.5"
stable-structures = { git = "https://github.com/dfinity/ic", rev = "9e6e9cb5c00b2c9f0968bb4f3181fe9c3acf5a99" }
