[package]
name = "internet_identity_log"
description = "Internet Identity Log Canister"
version = "0.1.0"
edition = "2021"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
serde = "1"
serde_bytes = "0.11"
serde_cbor = "0.11"
serde_with = "2.0.0"
internet_identity_interface = { path = "../internet_identity_interface" }
candid = "0.7"
ciborium = { git = "https://github.com/enarx/ciborium", rev = "e719537c99b564c3674a56defe53713c702c6f46" }
ic-cdk = "0.5"
ic-cdk-macros = "0.5"
stable-structures = { git = "https://github.com/dfinity/ic", rev = "dc4d68663fc7d9c897602721ba59b9428dd238ef" }
